--- a/8주차 (20200427-20200503)/20200427.ipynb
+++ b/8주차 (20200427-20200503)/20200427.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -225,28 +225,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ dev]  148642 utterances\n",
-      "[test]    4874 utterances\n"
+      "[ dev]  148642 utterances, 21820 *.npz files\n",
+      "[test]    4874 utterances,   676 *.npz files\n"
      ]
     }
    ],
    "source": [
-    "def utts(path):\n",
-    "    num_utts = 0\n",
+    "def print_count(s, path):\n",
+    "    utts, npzs = 0, 0\n",
     "    for dir_path, dir_names, filenames in os.walk(path):\n",
+    "        npzs += len(filenames)\n",
     "        for filename in filenames:\n",
-    "            num_utts += len(np.load(os.path.join(dir_path, filename))['names'])\n",
-    "    return num_utts\n",
+    "            utts += len(np.load(os.path.join(dir_path, filename))['names'])\n",
+    "    print(\"[{}] {:>7} utterances, {:>5} *.npz files\".format(s, utts, npzs))\n",
     "\n",
-    "print(\"[ dev] {:>7} utterances\".format(utts(dev_npz_path)))\n",
-    "print(\"[test] {:>7} utterances\".format(utts(test_npz_path)))"
+    "print_count(' dev', dev_npz_path)\n",
+    "print_count('test', test_npz_path)"
    ]
   }
  ],
